name:                nemnem
version:             0.1.0.1
synopsis:            Source code hyperlinker for Haskell.
license:             BSD3
license-file:        ../LICENSE
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8.0.4

library
  exposed-modules:     Hier,
                       Language.Haskell.Nemnem.Parse,
                       Language.Haskell.Nemnem.Parse.Module,
                       Language.Haskell.Nemnem.Printer

  other-modules:       Language.Haskell.Nemnem.Internal.Util
  hs-source-dirs:      src
  build-depends:       aeson >= 0.7,
                       array >= 0.4,
                       base >= 4.6,
                       blaze-html >= 0.7,
                       blaze-markup >= 0.6,
                       bytestring >= 0.10,
                       containers >= 0.5,
                       dlist >= 0.7,
                       haskell-src-exts == 1.14.*,
                       regex-tdfa >= 1.2,
                       text >= 1.1,
                       transformers >= 0.3,
                       vector >= 0.10
