name:                nemnem
version:             0.1.0.1
synopsis:            Source code hyperlinker for Haskell.
license:             BSD3
license-file:        ../LICENSE
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8.0.4

library
  exposed-modules:     Hier,
                       Language.Haskell.Nemnem.Parse,
                       Language.Haskell.Nemnem.Parse.Cpp,
                       Language.Haskell.Nemnem.Parse.Module,
                       Language.Haskell.Nemnem.Printer,
                       Language.Haskell.Nemnem.ProcessingPlan

  other-modules:       Language.Haskell.Nemnem.Internal.Source
                       Language.Haskell.Nemnem.Internal.Util
  hs-source-dirs:      src
  build-depends:       aeson >= 0.7,
                       array >= 0.4,
                       base >= 4.6,
                       blaze-html >= 0.7,
                       blaze-markup >= 0.6,
                       bytestring >= 0.10,
                       containers >= 0.5,
                       cpphs >= 1.18.5,
                       dlist >= 0.7,
                       fgl >= 5.5,
                       haskell-src-exts >= 1.16,
                       regex-tdfa >= 1.2,
                       text >= 1.1,
                       transformers >= 0.3,
                       vector >= 0.10

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  build-depends:  base >= 4 && < 5,
                  containers >= 0.5,
                  tasty >= 0.8,
                  tasty-hunit >= 0.9,
                  nemnem
